# MRiLab

./: README.md  license.txt
MRiLab 1.2.1/: MRiLab.m
MRiLab 1.2.1/Coil/Chest/Coil_9ChSurfChest/: Coil_9ChSurfChest.m
MRiLab 1.2.1/Coil/Head/Coil_1ChHead/: Coil_1ChHead.m
MRiLab 1.2.1/Coil/Head/Coil_8ChHead/: Coil_8ChHead.m
MRiLab 1.2.1/CoilElem/: CoilBiotSavart.m  CoilCircle.m  CoilElem.xml  CoilSimuAttr.xml  CoilUser.m
MRiLab 1.2.1/Grad/Head/Grad_LinearHead/: Grad_LinearHead.m
MRiLab 1.2.1/GradElem/: GradLinear.m  GradSimuAttr.xml  GradSymbolic.m  GradUser.m
MRiLab 1.2.1/Lib/src/: CMakeLists.txt
MRiLab 1.2.1/Lib/src/cmake/: FindFramewave.cmake  FindIPP.cmake  FindMatlab.cmake
MRiLab 1.2.1/Lib/src/engine/: CMakeLists.txt
MRiLab 1.2.1/Lib/src/engine/CPUEngine/: CMakeLists.txt  DoScanAtCPU.cpp
MRiLab 1.2.1/Lib/src/engine/GPUEngine/: BlochKernelME.cuh  BlochKernelMT.cuh  CMakeLists.txt  DoMEScanAtGPU.cu  DoMTScanAtGPU.cu  DoScanAtGPU.cu
MRiLab 1.2.1/Lib/src/interface/: CMakeLists.txt
MRiLab 1.2.1/Lib/src/interface/DoMatToHDF5/: CMakeLists.txt  DoMatToHDF5.cpp
MRiLab 1.2.1/Lib/src/recon/: CMakeLists.txt
MRiLab 1.2.1/Lib/src/recon/DoGridding/: CMakeLists.txt  DoGridding.cpp
MRiLab 1.2.1/Lib/src/renderer/: CMakeLists.txt
MRiLab 1.2.1/Mag/Head/Mag_GaussianHead/: Mag_GaussianHead.m
MRiLab 1.2.1/Mag/Head/Mag_LinearHead/: Mag_LinearHead.m
MRiLab 1.2.1/MagElem/: MagGaussian.m  MagLinear.m  MagSymbolic.m  MagUser.m
MRiLab 1.2.1/Mot/Head/Mot_RotateHead/: Mot_RotateHead.m  Mot_RotateHead.xml
MRiLab 1.2.1/MotElem/: MotRotate.m  MotTranslate.m
MRiLab 1.2.1/PSD/2D/: SimuAttr.xml
MRiLab 1.2.1/PSD/3D/: SimuAttr.xml
MRiLab 1.2.1/Plugin/: Plugin_ExecuteMotion.m  Plugin_IdealSpoiler.m  Plugin_LockK.m  Plugin_RTRecon.m  Plugin_ReleaseK.m  Plugin_ResetK.m  Plugin_ReverseK.m  Plugin_Timer.m  Plugin_rfRef.m
MRiLab 1.2.1/Recon/Default/: DoCalcDCF.m  DoCalcKBKernel.m  DoCartRecon.m  DoDeapodization.m  DoEPIRecon.m  DoFSERecon.m  DoNonCartRecon.m
MRiLab 1.2.1/Render3D/: DoPlay3DMotion.m
MRiLab 1.2.1/Resources/: MakePhantom.m  MakePhantom2.m
MRiLab 1.2.1/Resources/VObj/: BrainTissue.mat  CartilageMT.mat  CartilageTrangle.mat  WaterFatPhantom.mat  WhiteMatterME.mat
MRiLab 1.2.1/SeqElem/: SeqElem.xml  SeqSimuAttr.xml  SpinWatchAttr.xml  rfSimuAttr.xml
MRiLab 1.2.1/SeqElem/ADC/: ADCBlock.m  ADCCartesian.m  ADCEPI.m  ADCFSE.m  ADCRadial.m  ADCSpiral.m  ADCUser.m
MRiLab 1.2.1/SeqElem/Ext/: ExtBit.m
MRiLab 1.2.1/SeqElem/GxR/: GxAreaTrapezoid.m  GxAreaTrapezoid2.m  GxCartesian.m  GxEPI.m  GxFSE.m  GxRadial.m  GxSpiral.m  GxTrapezoid.m  GxUser.m
MRiLab 1.2.1/SeqElem/GyPE/: GyAreaTrapezoid.m  GyAreaTrapezoid2.m  GyCartesian.m  GyEPI.m  GyFSE.m  GyRadial.m  GySpiral.m  GyTrapezoid.m  GyUser.m
MRiLab 1.2.1/SeqElem/GzSS/: GzAreaTrapezoid.m  GzAreaTrapezoid2.m  GzCartesian.m  GzSelective.m  GzSelective2.m  GzTrapezoid.m  GzUser.m
MRiLab 1.2.1/SeqElem/STD/: StdBit.m  StdRamp.m  StdRect.m  StdTrap.m
MRiLab 1.2.1/SeqElem/rf/: rfBIR.m  rfBIREF.m  rfFermi.m  rfGaussian.m  rfHyperbolicSecant.m  rfRandom.m  rfRect.m  rfSLR.m  rfSinc.m  rfTanhTan.m  rfUser.m
MRiLab 1.2.1/Src/: AboutMRiLab.fig  AboutMRiLab.m  CoilDesignPanel.fig  CoilDesignPanel.m  CoilList.m  DoAddNoise.m  DoB1Scaling.m  DoCPUOSChk.m  DoConvStruct2Tree.m  DoDataTypeConv.m  DoDisableButton.m  DoDispFOV.m  DoEditValue.m  DoExtPlugin.m  DoGPUFetch.m  DoGradChk.m  DoImgRecon.m  DoLoadPhantom.m  DoManualShim.m  DoMotionGen.m  DoMultiEchoChk.m  DoMultiTransmitChk.m  DoParseXML.m  DoPlotCoilSen.m  DoPlotDiagm.m  DoPlotGradFie.m  DoPlotMagFie.m  DoPlotVObj.m  DoPostScan.m  DoPreScan.m  DoPulseGen.m  DoSNRCalc.m  DoSaveOutput.m  DoSaveSnapshot.m  DoScanSeriesUpd.m  DoSpinWatchExec.m  DoToHDF5.m  DoTrajK.m  DoUpdRateChk.m  DoUpdateBar.m  (+25 more)
MRiLab 1.2.1/VObj/Head/VObj_SphereHead/: VObj_SphereHead.m  VObj_SphereHead.mat  VObj_SphereHead.xml
MRiLab 1.2.1/VObjElem/: VObjCube.m  VObjCylinder.m  VObjElem.xml  VObjEllipsoid.m  VObjPyramid.m  VObjSphere.m
(+49 files in other folders)
